# VulkanSample

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/vulkansample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/Shaders/: shader.vert
app/src/main/cpp/: AndroidOut.cpp  CMakeLists.txt  Mesh.cpp  SwapChain.cpp  VkRenderer.cpp  VkTexture.cpp  main.cpp
app/src/main/cpp/header/: Mesh.h  SwapChain.h  VkRenderer.h  VkTexture.h  VkUtil.h
app/src/main/java/com/example/vulkansample/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/vulkansample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
